change name directory from html to food

--- a/webcrawler.ipynb
+++ b/webcrawler.ipynb
@@ -202,7 +202,7 @@
     "    result = urlparse(url)\n",
     "    soup = BeautifulSoup(html_source, 'html.parser')\n",
     "    if(result.path.endswith(WEB_TYPE)):\n",
-    "        filepath = 'html/' + unquote(result.netloc + result.path[:result.path.rfind('/')])\n",
+    "        filepath = 'foo/' + unquote(result.netloc + result.path[:result.path.rfind('/')])\n",
     "        filename = result.path[result.path.rfind('/')+1:]\n",
     "    else: \n",
     "        filepath = 'html/' + unquote(result.netloc + result.path)\n",
