--- a/webcrawler.ipynb
+++ b/webcrawler.ipynb
@@ -202,10 +202,10 @@
     "    result = urlparse(url)\n",
     "    soup = BeautifulSoup(html_source, 'html.parser')\n",
     "    if(result.path.endswith(WEB_TYPE)):\n",
-    "        filepath = 'foo/' + unquote(result.netloc + result.path[:result.path.rfind('/')])\n",
+    "        filepath = 'food/' + unquote(result.netloc + result.path[:result.path.rfind('/')])\n",
     "        filename = result.path[result.path.rfind('/')+1:]\n",
     "    else: \n",
-    "        filepath = 'html/' + unquote(result.netloc + result.path)\n",
+    "        filepath = 'food/' + unquote(result.netloc + result.path)\n",
     "\n",
     "    os.makedirs(filepath, 0o755, exist_ok=True)\n",
     "    abs_path = filepath + '/' + filename\n",
