update name to pending_queue.txt

--- a/webcrawler.ipynb
+++ b/webcrawler.ipynb
@@ -2,11 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "UDAd4VRsQNNt"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: beautifulsoup4 in c:\\users\\sinta\\anaconda3\\lib\\site-packages (4.9.3)\n",
+      "Requirement already satisfied: soupsieve>1.2; python_version >= \"3.0\" in c:\\users\\sinta\\anaconda3\\lib\\site-packages (from beautifulsoup4) (2.0.1)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Requirement already satisfied: requests in c:\\users\\sinta\\anaconda3\\lib\\site-packages (2.24.0)\n",
+      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in c:\\users\\sinta\\anaconda3\\lib\\site-packages (from requests) (1.25.11)\n",
+      "Requirement already satisfied: chardet<4,>=3.0.2 in c:\\users\\sinta\\anaconda3\\lib\\site-packages (from requests) (3.0.4)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\sinta\\anaconda3\\lib\\site-packages (from requests) (2020.6.20)\n",
+      "Requirement already satisfied: idna<3,>=2.5 in c:\\users\\sinta\\anaconda3\\lib\\site-packages (from requests) (2.10)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "%pip install beautifulsoup4\n",
     "%pip install requests"
@@ -14,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "p66UnP9IPxcG"
    },
@@ -41,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -49,7 +65,16 @@
     "id": "Q1ehGloHbD5Q",
     "outputId": "157644cc-3278-4197-fad1-cf3634d7b5bb"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Errno 2] No such file or directory: 'pending_queue.txt'\n",
+      "no backup\n"
+     ]
+    }
+   ],
    "source": [
     "# check backup file\n",
     "try:\n",
@@ -71,16 +96,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['https://www.wongnai.com/',\n",
+       " 'https://food.trueid.net/',\n",
+       " 'https://www.ryoiireview.com/',\n",
+       " 'https://www.7eleven.co.th/',\n",
+       " 'https://sou-dai.com/',\n",
+       " 'https://numsups.com/']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "frontier_q"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "id": "aBey0pirPzWw"
    },
@@ -99,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "id": "3L4ASe4GQE_a"
    },
@@ -124,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "id": "Y6D4rjMUQKJy"
    },
@@ -170,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "id": "Ky7dI-taQcsi"
    },
@@ -203,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "id": "64F9iwGAQPXj"
    },
@@ -237,7 +278,124 @@
     "id": "qZhNchosQpQg",
     "outputId": "a7f57a27-e0c2-454b-d296-38ad55cef486"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "write on file directory :  foodBank/www.wongnai.com//dummy\n",
+      "page:  1\n",
+      "write on file directory :  foodBank/food.trueid.net//dummy\n",
+      "page:  2\n",
+      "write on file directory :  foodBank/www.ryoiireview.com//dummy\n",
+      "page:  3\n",
+      "write on file directory :  foodBank/www.7eleven.co.th//dummy\n",
+      "page:  4\n",
+      "write on file directory :  foodBank/sou-dai.com//dummy\n",
+      "page:  5\n",
+      "write on file directory :  foodBank/numsups.com//dummy\n",
+      "page:  6\n",
+      "write on file directory :  foodBank/www.wongnai.com/restaurants/dummy\n",
+      "page:  7\n",
+      "write on file directory :  foodBank/www.wongnai.com/restaurants/copper/reviews/dummy\n",
+      "page:  8\n",
+      "write on file directory :  foodBank/www.wongnai.com/restaurants/copper/dummy\n",
+      "page:  9\n",
+      "write on file directory :  foodBank/www.wongnai.com/restaurants/chocolateville/reviews/dummy\n",
+      "page:  10\n",
+      "write on file directory :  foodBank/www.wongnai.com/restaurants/chocolateville/dummy\n",
+      "page:  11\n",
+      "write on file directory :  foodBank/www.wongnai.com/restaurants/leboeufthesteakfriesbistro/reviews/dummy\n",
+      "page:  12\n",
+      "write on file directory :  foodBank/www.wongnai.com/restaurants/leboeufthesteakfriesbistro/dummy\n",
+      "page:  13\n",
+      "write on file directory :  foodBank/www.wongnai.com/restaurants/5290th-ครัวดอกไม้ขาว-สาขาแรก/reviews/dummy\n",
+      "page:  14\n",
+      "write on file directory :  foodBank/www.wongnai.com/restaurants/5290th-ครัวดอกไม้ขาว-สาขาแรก/dummy\n",
+      "page:  15\n",
+      "write on file directory :  foodBank/www.wongnai.com/restaurants/ginzado-thonglor/reviews/dummy\n",
+      "page:  16\n",
+      "write on file directory :  foodBank/www.wongnai.com/restaurants/ginzado-thonglor/dummy\n",
+      "page:  17\n",
+      "write on file directory :  foodBank/www.wongnai.com/restaurants/sousaku/reviews/dummy\n",
+      "page:  18\n",
+      "write on file directory :  foodBank/www.wongnai.com/restaurants/sousaku/dummy\n",
+      "page:  19\n",
+      "HTTP error occurred: 404 Client Error: Not Found for url: https://www.wongnai.com/good-vibes/09msofc4zkbfymqyjrhftroswxgsda\n",
+      "HTTP error occurred: 404 Client Error: Not Found for url: https://www.wongnai.com/good-vibes/09msnc4blbk1uub4pqll2eacw9y7gw\n",
+      "HTTP error occurred: 404 Client Error: Not Found for url: https://www.wongnai.com/good-vibes/09msnto7yoqdbmcu5bpdjkxotjure1\n",
+      "HTTP error occurred: 404 Client Error: Not Found for url: https://www.wongnai.com/good-vibes/09msntndgpadtmyj5swx3tmsdhxyag\n",
+      "HTTP error occurred: 404 Client Error: Not Found for url: https://www.wongnai.com/good-vibes/09msntn2hbfltk4unegboei9mnjcg6\n",
+      "HTTP error occurred: 404 Client Error: Not Found for url: https://www.wongnai.com/good-vibes/09msntlo4rnckmijifbjrfiqo1evg1\n",
+      "HTTP error occurred: 404 Client Error: Not Found for url: https://www.wongnai.com/good-vibes/09msntkww0tf1ofosh911pw4euge95\n",
+      "HTTP error occurred: 404 Client Error: Not Found for url: https://www.wongnai.com/good-vibes/09msntkmntvzwxm9acivjhdrbuyljh\n",
+      "HTTP error occurred: 404 Client Error: Not Found for url: https://www.wongnai.com/good-vibes/09msntjzkfu4t2frw4comwf6kucwuq\n",
+      "HTTP error occurred: 404 Client Error: Not Found for url: https://www.wongnai.com/good-vibes/09msmcy1a1apufednnw79p7qk0kx9l\n",
+      "HTTP error occurred: 404 Client Error: Not Found for url: https://www.wongnai.com/good-vibes/09msm4r86jrwlujndeq4lr43kfxcsf\n",
+      "HTTP error occurred: 404 Client Error: Not Found for url: https://www.wongnai.com/good-vibes/09msm4qmzhvg6bochyk6kahgvpqo8g\n",
+      "HTTP error occurred: 404 Client Error: Not Found for url: https://www.wongnai.com/good-vibes/09msm4odhi1xzbod9vif55fd2jvmc7\n",
+      "HTTP error occurred: 404 Client Error: Not Found for url: https://www.wongnai.com/good-vibes/09msm4o4h3ych74y9pfhjobxwnx5zl\n",
+      "HTTP error occurred: 404 Client Error: Not Found for url: https://www.wongnai.com/good-vibes/09msm4moqiqg3jiwlghniadsjwbkqu\n",
+      "HTTP error occurred: 404 Client Error: Not Found for url: https://www.wongnai.com/good-vibes/09msm4lxiywlcwhkhv0b4gxk4lyw9z\n",
+      "HTTP error occurred: 404 Client Error: Not Found for url: https://www.wongnai.com/good-vibes/09msm4l9io0pzfu9exuluanghaxdx7\n",
+      "HTTP error occurred: 404 Client Error: Not Found for url: https://www.wongnai.com/good-vibes/09msm4kkmffjklrdjn2u36xxuf71ei\n",
+      "HTTP error occurred: 404 Client Error: Not Found for url: https://www.wongnai.com/good-vibes/09msm4kfgzfc8ujmfnblc1bpli8q4y\n",
+      "write on file directory :  foodBank/www.wongnai.com/nearby/businesses/dummy\n",
+      "page:  20\n",
+      "write on file directory :  foodBank/www.wongnai.com/restaurants/maeklonghuaplamorfai/dummy\n",
+      "page:  21\n",
+      "write on file directory :  foodBank/www.wongnai.com/restaurants/tonkatsuwako-ist/dummy\n",
+      "page:  22\n",
+      "write on file directory :  foodBank/www.wongnai.com/restaurants/zanotti/dummy\n",
+      "page:  23\n",
+      "HTTP error occurred: 404 Client Error: Not Found for url: https://www.wongnai.com/restaurants/3569nh-%E0%B9%80%E0%B8%88%E0%B9%8A%E0%B9%84%E0%B8%9D-%E0%B8%9B%E0%B8%A3%E0%B8%B0%E0%B8%95%E0%B8%B9%E0%B8%9C%E0%B8%B5\n",
+      "write on file directory :  foodBank/www.wongnai.com/restaurants/shangarila/dummy\n",
+      "page:  24\n",
+      "write on file directory :  foodBank/www.wongnai.com/restaurants/157461dj-ครัวดอกไม้ขาว-siam-square-one/dummy\n",
+      "page:  25\n",
+      "write on file directory :  foodBank/www.wongnai.com/restaurants/trattoriapizzariailbolognese/dummy\n",
+      "page:  26\n",
+      "write on file directory :  foodBank/www.wongnai.com/restaurants/440122oz-ห้างหุ้นส่วนจำกัด-88มหาสาร-ห้างหุ้นส่วนจำกัด-88มหาสาร/dummy\n",
+      "page:  27\n",
+      "write on file directory :  foodBank/www.wongnai.com/restaurants/isao/dummy\n",
+      "page:  28\n",
+      "write on file directory :  foodBank/www.wongnai.com/restaurants/custardnakamura/dummy\n",
+      "page:  29\n",
+      "write on file directory :  foodBank/www.wongnai.com/restaurants/330896xa-อำแดงไต้ฝุ่น-พระราม-3/dummy\n",
+      "page:  30\n",
+      "write on file directory :  foodBank/www.wongnai.com/restaurants/chareonsang/dummy\n",
+      "page:  31\n",
+      "write on file directory :  foodBank/www.wongnai.com/restaurants/katsushin/dummy\n",
+      "page:  32\n",
+      "write on file directory :  foodBank/www.wongnai.com/restaurants/bankara-skv39/dummy\n",
+      "page:  33\n",
+      "write on file directory :  foodBank/www.wongnai.com/restaurants/sawangarunbeef/dummy\n",
+      "page:  34\n",
+      "write on file directory :  foodBank/www.wongnai.com/restaurants/jaeo/dummy\n",
+      "page:  35\n",
+      "write on file directory :  foodBank/www.wongnai.com/restaurants/amatissimo-skr/dummy\n",
+      "page:  36\n",
+      "write on file directory :  foodBank/www.wongnai.com/restaurants/torayakinikucafe/dummy\n",
+      "page:  37\n",
+      "write on file directory :  foodBank/www.wongnai.com/restaurants/215047bk-el-mercado-soi-phaisingto/dummy\n",
+      "page:  38\n",
+      "write on file directory :  foodBank/www.wongnai.com/restaurants/fillets/dummy\n",
+      "page:  39\n",
+      "write on file directory :  foodBank/www.wongnai.com/restaurants/kosirae/dummy\n",
+      "page:  40\n",
+      "write on file directory :  foodBank/www.wongnai.com/restaurants/154151tu-chim-by-siam-wisdom/dummy\n",
+      "page:  41\n",
+      "write on file directory :  foodBank/www.wongnai.com/restaurants/hengchunseng/dummy\n",
+      "page:  42\n",
+      "write on file directory :  foodBank/www.wongnai.com/restaurants/248li-ขวัญจิตร/dummy\n",
+      "page:  43\n",
+      "write on file directory :  foodBank/www.wongnai.com/restaurants/340249dt-craftsman-roastery-บำรุงเมือง-ป๊อปอัพ-คาเฟ่/dummy\n",
+      "page:  44\n",
+      "write on file directory :  foodBank/www.wongnai.com/restaurants/flavors/dummy\n",
+      "page:  45\n"
+     ]
+    }
+   ],
    "source": [
     "# write html > 10000 page.\n",
     "\n",
