--- a/webcrawler.ipynb
+++ b/webcrawler.ipynb
@@ -22,8 +22,7 @@
    "source": [
     "# GLOBAL variable\n",
     "# seed_url = ''\n",
-    "# first 5000 website from 'https://www.wongnai.com/', 'https://food.trueid.net/', 'https://www.ryoiireview.com/'\n",
-    "# after 5000 website from 'https://www.7eleven.co.th/','https://sou-dai.com/','https://numsups.com/'\n",
+    "# 15000 website from 'https://www.wongnai.com/', 'https://food.trueid.net/', 'https://www.ryoiireview.com/','https://www.7eleven.co.th/','https://sou-dai.com/','https://numsups.com/'\n",
     "frontier_q = ['https://www.wongnai.com/', 'https://food.trueid.net/', 'https://www.ryoiireview.com/','https://www.7eleven.co.th/','https://sou-dai.com/','https://numsups.com/']\n",
     "visited_q = []\n",
     "visited_host = set()\n",
@@ -187,17 +186,19 @@
     "    result = urlparse(url)\n",
     "    soup = BeautifulSoup(html_source, 'html.parser')\n",
     "    if(result.path.endswith(WEB_TYPE)):\n",
-    "        filepath = 'foodBank/' + unquote(result.netloc + result.path[:result.path.rfind('/')])\n",
+    "        filepath = 'html/' + unquote(result.netloc + result.path[:result.path.rfind('/')])\n",
     "        filename = result.path[result.path.rfind('/')+1:]\n",
     "    else: \n",
-    "        filepath = 'foodBank/' + unquote(result.netloc + result.path)\n",
-    "\n",
+    "        filepath = 'html/' + unquote(result.netloc + result.path)\n",
+    "    \n",
     "    os.makedirs(filepath, 0o755, exist_ok=True)\n",
     "    abs_path = filepath + '/' + filename\n",
     "    if(debug):\n",
     "        print('write on file directory : ',abs_path)\n",
+    "    all_el = soup.find_all('a',href=True)\n",
+    "    file_source = soup.get_text() + \"\\n\".join([str(e) for e in all_el])\n",
     "    f = codecs.open(abs_path ,'w' ,'utf-8' )\n",
-    "    f.write(soup.get_text())\n",
+    "    f.write(file_source)\n",
     "    f.close()"
    ]
   },
@@ -241,7 +242,7 @@
    "source": [
     "# write html > 10000 page.\n",
     "\n",
-    "while PAGE_COUNT <= 10000 and frontier_q:\n",
+    "while PAGE_COUNT < 20000 and frontier_q:\n",
     "    # backup url that was pending in queue.\n",
     "    try:\n",
     "        if PAGE_COUNT%100 == 0 :\n",
